--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -1,5 +1,5 @@
 ext {
-    constraint_version = "1.1.0"
+    constraint_version = "1.1.2"
     coroutines_version = "1.0.0"
     coroutines_adapter_version = "0.9.2"
     retrofit_version = "2.4.0"
@@ -11,6 +11,7 @@ ext {
     glide_version = "4.8.0"
     support_version = "27.1.1"
     lifecycle_version = "2.0.0"
+    androidx_version = "1.0.0"
 
     mockito_core_version = "2.18.3"
     mockito_kotlin_version = "1.5.0"
@@ -18,11 +19,9 @@ ext {
     junit_version = "4.12"
 
 
-    appCompat = "com.android.support:appcompat-v7:${support_version}"
-    design = "com.android.support:design:${support_version}"
-    appCompat = "com.android.support:appcompat-v7:${support_version}"
-    recycler_view = "com.android.support:recyclerview-v7:${support_version}"
-    support_annotations = "com.android.support:support-annotations:${support_version}"
+    appCompat = "androidx.appcompat:appcompat:${androidx_version}"
+    design = "com.google.android.material:material:${androidx_version}"
+    recycler_view = "androidx.recyclerview:recyclerview:${androidx_version}"
     card_view = "com.android.support:cardview-v7:${support_version}"
     androidx_lifecycle = "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
     androidx_compiler = "androidx.lifecycle:lifecycle-compiler:${lifecycle_version}"
@@ -40,7 +39,7 @@ ext {
     koin_viewmodel = "org.koin:koin-androidx-viewmodel:${koin_version}"
     anko_common = "org.jetbrains.anko:anko-common:${anko_version}"
     anko_coroutines = "org.jetbrains.anko:anko-coroutines:${anko_version}"
-    constraint_layout = "com.android.support.constraint:constraint-layout:${constraint_version}"
+    constraint_layout = "androidx.constraintlayout:constraintlayout:${constraint_version}"
     glide = "com.github.bumptech.glide:glide:${glide_version}"
     glide_processor = "com.github.bumptech.glide:compiler:${glide_version}"
     mockito = "org.mockito:mockito-inline:${mockito_core_version}"
