Add main screen base functionality

--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -6,13 +6,10 @@ ext {
     okHttp_version = "3.10.0"
     gson_version = "2.8.5"
     koin_version = "1.0.2"
-    support_library_version = "27.0.2"
     anko_version = "0.10.5"
     glide_version = "4.8.0"
-    support_version = "27.1.1"
     lifecycle_version = "2.0.0"
     androidx_version = "1.0.0"
-
     mockito_core_version = "2.18.3"
     mockito_kotlin_version = "1.5.0"
     timber_version = "4.7.1"
@@ -22,7 +19,7 @@ ext {
     appCompat = "androidx.appcompat:appcompat:${androidx_version}"
     design = "com.google.android.material:material:${androidx_version}"
     recycler_view = "androidx.recyclerview:recyclerview:${androidx_version}"
-    card_view = "com.android.support:cardview-v7:${support_version}"
+    card_view = "androidx.cardview:cardview:${androidx_version}"
     androidx_lifecycle = "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
     androidx_compiler = "androidx.lifecycle:lifecycle-compiler:${lifecycle_version}"
     kotlin_JDK8 = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${project.kotlin_version}"
