Link api responses with architechture, fixed params instead of headers on the request

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation retrofit
     implementation retrofit_gson_converter
     implementation okHttp
+    implementation okHttp_logger
     implementation gson
     implementation koin
     implementation koin_viewmodel
