--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.alvarohidalgo.heroesmvvm">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:allowBackup="true"
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:roundIcon="@mipmap/ic_launcher_round"
                  android:supportsRtl="true"
                  android:theme="@style/AppTheme"
+                 android:name=".HeroApp"
                  tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".ui.main.MainActivity">
